--- a/src/pages/homepage/homePage.css
+++ b/src/pages/homepage/homePage.css
@@ -4,17 +4,101 @@
   margin: auto;
 }
 
-.homePage .scatter {
-  height: fit-content;
-  position: relative;
+.homePage .scatter .scatter1 {
+  position: absolute;
+  font-size: 20px;
+  width: 160px;
+  top: 10%;
+  left: 15%;
+  z-index: 999;
+  pointer-events: none;
 }
 
-.homePage .scatter p {
+.homePage .scatter .scatter2 {
   position: absolute;
-  padding: 8px;
   font-size: 15px;
-  width: 100px;
+  width: 170px;
+  top: 20%;
+  left: 40%;
+  z-index: 999;
+  pointer-events: none;
+}
+
+.homePage .scatter .scatter3 {
+  position: absolute;
+  font-size: 25px;
+  width: 160px;
+  top: 30%;
+  left: 50%;
+  z-index: 999;
+  pointer-events: none;
+}
+
+.homePage .scatter .scatter4 {
+  position: absolute;
+  font-size: 20px;
+  width: 160px;
+  top: 23%;
+  left: 20%;
+  z-index: 999;
+  pointer-events: none;
+}
+
+.homePage .scatter .scatter5 {
+  position: absolute;
+  font-size: 15px;
+  width: 150px;
+  top: 45%;
+  left: 30%;
+  z-index: 999;
+  pointer-events: none;
+}
+
+.homePage .scatter .scatter6 {
+  position: absolute;
+  font-size: 23px;
+  width: 180px;
+  top: 60%;
+  left: 20%;
+  z-index: 999;
+  pointer-events: none;
+}
+
+.homePage .scatter .scatter7 {
+  position: absolute;
+  font-size: 20px;
+  width: 160px;
   top: 50%;
+  left: 80%;
+  z-index: 999;
+  pointer-events: none;
+}
+
+.homePage .scatter .scatter8 {
+  position: absolute;
+  font-size: 15px;
+  width: 160px;
+  top: 65%;
+  left: 70%;
+  z-index: 999;
+  pointer-events: none;
+}
+
+.homePage .scatter .scatter9 {
+  position: absolute;
+  font-size: 23px;
+  width: 180px;
+  top: 15%;
+  left: 75%;
+  z-index: 999;
+  pointer-events: none;
+}
+
+.homePage .scatter .scatter10 {
+  position: absolute;
+  font-size: 20px;
+  width: 160px;
+  bottom: 10%;
   left: 50%;
   z-index: 999;
   pointer-events: none;
@@ -25,7 +109,6 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  border: 1px solid red;
 }
 
 .homePage .header > * {
